@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: rpmdav: oops, WebDAV is different code path, revert some changes.
     - jbj: rpmdav: compute st_nlink correctly for plain HTTP dirs.
     - jbj: rpmavx: fix: alloc an extra byte for pesky trailing '/'.
     - jbj: rpmdav: fix: refill/restart if forward parse runs out of data.
